Make sure elements in asset editor remain visible

--- a/resources/css/components/assets.css
+++ b/resources/css/components/assets.css
@@ -170,6 +170,10 @@
                 }
                 box-shadow: 0 0 32px rgba(0, 0, 0, 0.35);
             }
+
+            > .w-full {
+                @apply w-full;
+            }
         }
     }
 
